--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,27 @@
 *{ 
-margin: 0;
+margin: 0 ;
+padding: 0 ;
+box-sizing: border-box ;
 }
 
 .banner {
-width: 700px ;
-height: 350px ;    
+width: 100% ;
+height: 175px ;    
 background-color: #4ea0ff ;
-background-image: url(/img/pattern.png) ;
+background-image: url(../img/pattern.png) ;
+background-size: auto auto contain ;
+
 
 }
 
 #logo {
 
+}
+
+#autore {
+    color: #818181;
+    
+}
+#autore a {
+    text-decoration: none;
 }
