--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,26 @@ background-size: auto auto contain ;
 }
 
 #logo {
+    height: 80px ;
+    width: 230px ;
+    position: relative;
+    top: 50%;
+    left: 10px;
 
+}
+main {
+   width: 98%;
+   margin: auto;
+}
+
+main div {
+    margin-top: 25px ;
+    margin-bottom: 25px ;
+}
+
+.evidente{
+    background-color: yellow ;
+    display: inline;
 }
 
 #autore {
@@ -25,3 +44,14 @@ background-size: auto auto contain ;
 #autore a {
     text-decoration: none;
 }
+
+
+
+
+.tg  {border-collapse:collapse;border-spacing:0;}
+.tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+  overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+  font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
+.tg .tg-0lax{text-align:left;vertical-align:top}
