--- a/css/styles.css
+++ b/css/styles.css
@@ -46,12 +46,36 @@ main div {
 }
 
 
+#testa {
+    background-color: #20a9e5 ;
+    color: #ffffff ;
+    
+  
+}
 
+#corpo1, #corpo3 {
+    background-color: #b1e5f2;
 
-.tg  {border-collapse:collapse;border-spacing:0;}
-.tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
-  overflow:hidden;padding:10px 5px;word-break:normal;}
-.tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
-  font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
-.tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
-.tg .tg-0lax{text-align:left;vertical-align:top}
+}
+
+#interesse {
+    color: #818181 ;
+}
+
+.testoimmagini {
+    color: #ffffff;
+    margin: 15px 0px 0px 5px ;
+
+}
+
+#immagine1 {
+    height: 208px ;
+    width: 300px ;
+    background-image: url(../img/monitor.jpg) ;
+}
+
+#immagine2 {
+    height: 208px ;
+    width: 300px ;
+    background-image: url(../img/graph.jpg) ;
+}
