--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-*{ 
+* { 
 margin: 0 ;
 padding: 0 ;
 box-sizing: border-box ;
@@ -10,8 +10,6 @@ height: 175px ;
 background-color: #4ea0ff ;
 background-image: url(../img/pattern.png) ;
 background-size: auto auto contain ;
-
-
 }
 
 #logo {
@@ -20,8 +18,8 @@ background-size: auto auto contain ;
     position: relative;
     top: 50%;
     left: 10px;
-
 }
+
 main {
    width: 98%;
    margin: auto;
@@ -32,30 +30,34 @@ main div {
     margin-bottom: 25px ;
 }
 
-.evidente{
+.evidente {
     background-color: yellow ;
     display: inline;
 }
 
 #autore {
     color: #818181;
-    
 }
+
 #autore a {
     text-decoration: none;
 }
 
+table {
+    border-collapse:collapse;
+}
+
+td:nth-child(2), td:first-child {
+    width: 20% ;
+}
 
 #testa {
     background-color: #20a9e5 ;
     color: #ffffff ;
-    
-  
 }
 
-#corpo1, #corpo3 {
+.azzurro {
     background-color: #b1e5f2;
-
 }
 
 #interesse {
@@ -64,8 +66,9 @@ main div {
 
 .testoimmagini {
     color: #ffffff;
-    margin: 15px 0px 0px 5px ;
-
+   position: relative;
+   left: 10px;
+   top: 10px;
 }
 
 #immagine1 {
